--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
 
 <body>
 	<header>
+
 		<div class="landingsection">
 			<h1 style="">I am kenny mark </h1>
 		</div>	
 		<nav>
 			<ul>
+				<i class="fa fa-bars"></i>
 				<li><a href="">About</a></li>
 				<li><a href="">Projects</a></li>
 				<li><a href="">Skills</a></li>
@@ -47,6 +49,7 @@
 		<div class="icons">
 			<a href="#"><i class="fa fa-facebook"></i></a>
 			<a href="#"><i class="fa fa-twitter"></i></a>
+			<a href=""><i class="fa fa-linkedin"></i></a>
 			<a href="#"><i class="fa fa-envelope-o"></i></a>
 		</div>
 		<p>All rights reserved ©Kenneth Mark Coffie 2015 </p>
