fixed navbar color

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 			    <div class="col-1-1">
 			       <div class="content">
 			           <p class="aboutme" >
-							I am currently a student in college studying Computing and Systems Development at John Moore's University, Liverpool. I am a junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded and in less than 3 days.
+							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded and in less than 3 days.
 						</p>
 			       </div>
 			    </div>
