added the word junior

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 		<div class="landingsection">
 			<h1 style="">I am kenny mark </h1>
-			<h1 style="font-size:30px; padding-top:20px;">WEB DESIGNER  //FRONT END DEVELOPER</h1>
+			<h1 style="font-size:30px; padding-top:20px;">WEB DESIGNER  //JUNIOR FRONT END DEVELOPER</h1>
 		</div>	
 		<nav>
 			<ul>
