--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
 	
 	<footer>
 		<div class="icons">
-			<a href="#"><i class="fa fa-facebook"></i></a>
-			<a href="#"><i class="fa fa-twitter"></i></a>
-			<a href=""><i class="fa fa-linkedin"></i></a>
-			<a href=""><i class="fa fa-github"></i></a>
+			<a href="https://www.facebook.com/kenneth.markcoffie"><i class="fa fa-facebook"></i></a>
+			<a href="https://twitter.com/sleekykenny"><i class="fa fa-twitter"></i></a>
+			<a href="https://www.linkedin.com/pub/kenneth-mark-coffie/103/596/831"><i class="fa fa-linkedin"></i></a>
+			<a href="https://github.com/kennymark"><i class="fa fa-github"></i></a>
 			<a href="mailto:unico.genio@outlook.com"><i class="fa fa-envelope"></i></a>	
 		</div>
 		
