--- a/index.html
+++ b/index.html
@@ -2,34 +2,31 @@
 <html>
 	
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
+	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<title>Kenny Mark</title>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-	<link href='https://fonts.googleapis.com/css?family=Raleway:300,400,500' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/simplegrid.css">
+	<script src="js/jquery.flipping_text.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-	<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-		
-		ga('create', 'UA-68267074-1', 'auto');
-		ga('send', 'pageview');
-	
-	</script>
 </head>
 
 
 <body>
 	<header>
-
 		<div class="landingsection">
-			<h1 style="">I am kenny mark </h1>
+			<h1 class="intro">I am kenny mark </h1>
+			<script>
+				$(".intro").flipping_text(){
+			    tickerTime: 10,
+			    customRandomChar: false,
+			    tickerCount: 10,
+			    opacityEffect: true,
+			    resetOnChange: false
+			  });
+			</script>
 			<h1 style="font-size:30px; padding-top:20px;">WEB DESIGNER  //JUNIOR FRONT END DEVELOPER</h1>
 		</div>
 		<nav>
@@ -43,8 +40,6 @@
 		</nav>
 	</header>
 
-
-
 	<a name="about">
 		<div class="aboutsection">
 			<div class="photocircle">
@@ -54,7 +49,7 @@
 			    <div class="col-1-1">
 			       <div class="content">
 			           <p class="aboutme" >
-							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded and in less than 3 days.
+							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. <br>I am a junior web developer but I also specialize in web designing. I am very passionate about developing websites and <br>I mainly focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded and in less than 3 days.
 						</p>
 			       </div>
 			    </div>
@@ -71,19 +66,19 @@
 			       <div class="content">
 			       	   <h3>SKILLS</h3>
 
-			           <p class="skillstext" style="padding-top:40px;">• Git</p>
-			           <p class="skillstext">• Project Design </p>
-			           <p class="skillstext">• HTML5</p>
-			           <p class="skillstext">• CSS3</p>
-			           <p class="skillstext">• Javascript</p>
-			           <p class="skillstext">• JQuery</p>
+			           <p class="skillstext" style="padding-top:40px;"> Git</p>
+			           <p class="skillstext"> Project Design </p>
+			           <p class="skillstext"> HTML5</p>
+			           <p class="skillstext"> CSS3</p>
+			           <p class="skillstext"> Javascript</p>
+			           <p class="skillstext"> JQuery</p>
 
 			       </div>
 			    </div>
 			    <div class="col-1-2">
 			       <div class="content">
 
-			           <p style="padding-top:60px; line-height:32px; font-size:20px;"; >
+			           <p style=" padding-top:60px; line-height:32px; font-size:20px;;" >
 			           	I am currently a junior developer working my way up to be a mid-level developer very soon. I am actively spend hours
 			           	a day writing web code to perfect my skills. I am really passionate about web development hence the effort I put in.
 			           	Skill wise, I can practically build any type of website with a good modern and responsive design that doesn't complex interactions between the
@@ -114,7 +109,7 @@
 
 		<h3 style="text-align:center;">Made with<i class="fa fa-heart"></i>in Liverpool</h3>
 
-		<p>All rights reserved ©Kenneth Mark Coffie 2015 </p>
+		<p>All rights reserved Kenneth Mark Coffie 2015 </p>
 	</footer>
 
 	<script>
@@ -141,7 +136,6 @@
 
 		});
 	</script>
-	
-	
+
 </body>
 </html>
