--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	
 <head>
-	<meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<title>Kenny Mark</title>
@@ -27,12 +27,12 @@
 			    resetOnChange: false
 			  });
 			</script>
-			<h1 style="font-size:30px; padding-top:20px;">WEB DESIGNER  //JUNIOR FRONT END DEVELOPER</h1>
+			<h1 style="font-size:30px; padding-top:20px; font-weight=300;">WEB DESIGNER //JUNIOR FRONT END DEVELOPER</h1>
 		</div>
 		<nav>
 			<ul>
 				<i class="fa fa-bars"></i>
-				<li><a href="#about">About</a></li>
+				<li style="transition: all 0.15s ease;"><a href="#about">About</a></li>
 				<li><a href="#projects">Projects</a></li>
 				<li><a href="#skills">Skills</a></li>
 				<li><a href="#contact">Contact</a></li>
@@ -79,8 +79,8 @@
 			       <div class="content">
 
 			           <p style=" padding-top:60px; line-height:32px; font-size:20px;;" >
-			           	I am currently a junior developer working my way up to be a mid-level developer very soon. I am actively spend hours
-			           	a day writing web code to perfect my skills. I am really passionate about web development hence the effort I put in.
+			           	I am currently a junior developer working my way up to be a mid-level developer very soon. 
+			           	I actively spend many hours per day writing web code to perfect my skills. I am really passionate about web development hence the effort I put in.
 			           	Skill wise, I can practically build any type of website with a good modern and responsive design that doesn't complex interactions between the
 			           	browser and a server.
 			           </p>
