--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/simplegrid.css">
-	<script src="js/jquery.flipping_text.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
@@ -18,25 +17,16 @@
 <body>
 	<header>
 		<div class="landingsection">
-			<h1 class="intro">I am kenny mark </h1>
-			<script>
-				$(".intro").flipping_text(){
-			    tickerTime: 10,
-			    customRandomChar: false,
-			    tickerCount: 10,
-			    opacityEffect: true,
-			    resetOnChange: false
-			  });
-			</script>
-			<h1 style="font-size:30px; padding-top:20px; font-weight=300;">WEB DESIGNER //JUNIOR FRONT END DEVELOPER</h1>
+			<h1 class="intro" style="text-transform: uppercase;">I am kenny mark </h1>
+			<h1 style="font-size:30px; padding-top:20px;" >Web Designer //Junior Front End Developer</h1>
 		</div>
 		<nav>
 			<ul>
 				<i class="fa fa-bars"></i>
-				<li style="transition: all 0.15s ease;"><a href="#about">About</a></li>
-				<li><a href="#projects">Projects</a></li>
-				<li><a href="#skills">Skills</a></li>
-				<li><a href="#contact">Contact</a></li>
+				<li><a href="#about" class="navtext">About</a></li>
+				<li><a href="#projects" class="navtext">Projects</a></li>
+				<li><a href="#skills" class="navtext">Skills</a></li>
+				<li><a href="#contact" class="navtext">Contact</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -49,8 +39,8 @@
 			<div class="grid grid-pad">
 			    <div class="col-1-1">
 			       <div class="content">
-			           <p class="aboutme" >
-							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. <br>I am a junior web developer but I also specialize in web designing. I am very passionate about developing websites and <br>I mainly focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded and in less than 3 days.
+			           <p class="aboutme" id="text">
+							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a <br> junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly<br> focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded <br>and in less than 3 days.
 						</p>
 			       </div>
 			    </div>
@@ -59,7 +49,6 @@
 		</div>
 	</a>
 
-
 	<a name="skills">
 		<div class="skillssection">
 			<div class="grid grid-pad">
@@ -67,19 +56,19 @@
 			       <div class="content">
 			       	   <h3>SKILLS</h3>
 
-			           <p class="skillstext" style="padding-top:20px;"> Git</p>
-			           <p class="skillstext"> Project Design </p>
-			           <p class="skillstext"> HTML5</p>
-			           <p class="skillstext"> CSS3</p>
-			           <p class="skillstext"> Javascript</p>
-			           <p class="skillstext"> JQuery</p>
+			           <p class="skillstext" style="padding-top:20px;" id="text"><i class="fa fa-git"></i> Git</p>
+			           <p class="skillstext" id="text"><i class="fa fa-tasks"></i>Project Design </p>
+			           <p class="skillstext" id="text"><i class="fa fa-html5"></i>HTML5</p>
+			           <p class="skillstext" id="text"><i class="fa fa-css3"></i>CSS3</p>
+			           <p class="skillstext" id="text"> Javascript</p>
+			           <p class="skillstext" id="text"> JQuery</p>
 
 			       </div>
 			    </div>
 			    <div class="col-1-2">
 			       <div class="content">
 
-			           <p style=" padding-top:60px; line-height:32px; font-size:20px;;" >
+			           <p style=" padding-top:60px; line-height:32px; font-size:20px" id="text">
 			           	I am currently a junior developer working my way up to be a mid-level developer very soon. 
 			           	I actively spend many hours per day writing web code to perfect my skills. I am really passionate about web development hence the effort I put in.
 			           	Skill wise, I can practically build any type of website with a good modern and responsive design that doesn't complex interactions between the
@@ -98,7 +87,6 @@
 		</div>
 	</a>
 
-
 	<footer>
 		<div class="icons">
 			<a href="https://www.facebook.com/kenneth.markcoffie"><i class="fa fa-facebook"></i></a>
@@ -110,7 +98,7 @@
 
 		<h3 style="text-align:center;">Made with<i class="fa fa-heart"></i>in Liverpool</h3>
 
-		<p>All rights reserved Kenneth Mark Coffie 2015 </p>
+		<p>All rights reserved <i class="fa fa-copyright"></i>Kenneth Mark Coffie 2015 </p>
 	</footer>
 
 	<script>
@@ -134,9 +122,15 @@
 		    } else {
 		        $('nav').removeClass('past-main');
 		   }
-
 		});
 	</script>
 
+	<script>
+		$(document).ready(function(){
+			$(".fa-bars").click(function(){
+			    $("nav").show();
+				});
+		});
+	</script>
 </body>
 </html>
