reverse font+added font shadow

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<header>
 		<div class="landingsection">
 			<h1 class="intro" style="text-transform: uppercase;">I am kenny mark </h1>
-			<h1 style="font-size:30px; padding-top:20px;" >Web Designer //Junior Front End Developer</h1>
+			<h1 style="font-size:30px; padding-top:20px color:#3E4848;" >Web Designer //Junior Front End Developer</h1>
 		</div>
 		<nav>
 			<ul>
