--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="HandheldFriendly" content="true">
 	<title>Kenny Mark</title>
 	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<link rel="stylesheet" href="css/simplegrid.css">
+	<link rel="stylesheet" href="css/font-awesome.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 </head>
 
@@ -18,8 +18,11 @@
 	<header>
 		<div class="landingsection">
 			<h1 class="intro" style="text-transform: uppercase;">I am kenny mark </h1>
-			<h1 style="font-size:30px; padding-top:20px color:#3E4848;" >Web Designer //Junior Front End Developer</h1>
+			<h1 style="font-size:30px; padding-top:10px;" >Web Designer //Junior Front End Developer</h1>
+				<i class="fa fa-angle-double-down"></i>
+		
 		</div>
+
 		<nav>
 			<ul>
 				<i class="fa fa-bars"></i>
@@ -29,6 +32,7 @@
 				<li><a href="#contact" class="navtext">Contact</a></li>
 			</ul>
 		</nav>
+
 	</header>
 
 	<a name="about">
@@ -40,7 +44,7 @@
 			    <div class="col-1-1">
 			       <div class="content">
 			           <p class="aboutme" id="text">
-							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a <br> junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly<br> focus on UX and UI. I have worked on several personal projects including my personal website which were all hand coded <br>and in less than 3 days.
+							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a freelance <br> junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus  on<br> UX and UI. I have worked on several personal projects including my personal website which were all hand coded in less<br> than 3 days.
 						</p>
 			       </div>
 			    </div>
@@ -88,6 +92,8 @@
 	</a>
 
 	<footer>
+
+
 		<div class="icons">
 			<a href="https://www.facebook.com/kenneth.markcoffie"><i class="fa fa-facebook"></i></a>
 			<a href="https://twitter.com/sleekykenny"><i class="fa fa-twitter"></i></a>
@@ -99,6 +105,7 @@
 		<h3 style="text-align:center;">Made with<i class="fa fa-heart"></i>in Liverpool</h3>
 
 		<p>All rights reserved <i class="fa fa-copyright"></i>Kenneth Mark Coffie 2015 </p>
+		
 	</footer>
 
 	<script>
@@ -116,12 +123,7 @@
 		        $('nav').removeClass('past-main');
 		   }
 
-		   if (stop > mainbottom) {
-		        $('ul').addClass('past-height');
-
-		    } else {
-		        $('nav').removeClass('past-main');
-		   }
+		  
 		});
 	</script>
 
