--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 	<link rel="stylesheet" href="css/simplegrid.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/main.js"></script>
 </head>
-
 
 <body>
 	<header>
 		<div class="landingsection">
 			<h1 class="intro" style="text-transform: uppercase;">I am kenny mark </h1>
 			<h1 style="font-size:30px; padding-top:10px;" >Web Designer //Junior Front End Developer</h1>
-				<i class="fa fa-angle-double-down"></i>
+			<i class="fa fa-angle-double-down"><a href="#about"></a></i>
 		
 		</div>
 
@@ -44,7 +44,7 @@
 			    <div class="col-1-1">
 			       <div class="content">
 			           <p class="aboutme" id="text">
-							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a freelance <br> junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus  on<br> UX and UI. I have worked on several personal projects including my personal website which were all hand coded in less<br> than 3 days.
+							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a freelance <br> junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus  on<br> UX and UI. I have worked on several personal projects including my personal website which were all hand coded in less than<br> 3 days.
 						</p>
 			       </div>
 			    </div>
@@ -126,13 +126,26 @@
 		  
 		});
 	</script>
-
 	<script>
-		$(document).ready(function(){
-			$(".fa-bars").click(function(){
-			    $("nav").show();
-				});
+		$(function(){
+			smoothScroll(1000);
 		});
+
+		function smoothScroll (duration) {
+			$('a[href^="#"]').on('click', function(event) {
+
+			    var target = $( $(this).attr('href') );
+
+			    if( target.length ) {
+			        event.preventDefault();
+			        $('html, body').animate({
+			            scrollTop: target.offset().top
+			        }, duration);
+			    }
+			});
+		}
+
 	</script>
+	
 </body>
 </html>
