--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/simplegrid.css">
 	<link rel="stylesheet" href="css/font-awesome.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
+	<link rel="icon" type="images/png" href="images/fav.png" /
+	<link rel="icon" type="image/png" href="images/favicon.ico" /
 </head>
 
 <body>
@@ -87,7 +89,8 @@
 
 	<a name="contact">
 		<div class="contactsection">
-
+	   		 
+          
 		</div>
 	</a>
 
