--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 		    </div>
 		    <div class="col-1-2">
 		       <div class="content">
-		          <img src="images/placeholder.png" style="height:400px; width:100%;">
+		          <img src="images/placeholder.PNG" style="height:400px; width:100%;">
 		       </div>
 		    </div>
 		</div>
