--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 
 	<a name="about">
 		<div class="aboutsection">
+			<h3 style="text-align:center; padding:40px 0; color:white; font-size:30px;">About Me</h3>
 			<div class="photocircle">
 				<img src="images/profilepic.jpg" alt="" id="profilepic">
 			</div>
@@ -46,7 +47,8 @@
 			    <div class="col-1-1">
 			       <div class="content">
 			           <p class="aboutme" id="text">
-							I am currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I am a freelance junior web developer but I also specialize in web designing. I am very passionate about developing websites and I mainly focus  on UX and UI. I have worked on several personal projects including my personal website which were all hand coded in less than 3 days.
+						Currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I'm a freelance junior web developer by night and student by day. Websign is my main focus even though I love everything  about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and like the cliche goes, sometimes Less is More. 
+
 						</p>
 						
 			       </div>
@@ -63,7 +65,7 @@
 			<div class="grid grid-pad padding">
 			    <div class="col-1-2">
 			       <div class="content">
-			       	   <h3 style="color:white; font-size:30px; padding-top:10px; font-weight:400; text-align:left;">Skills</h3>
+			       	   <h3 style="color:white; font-size:30px; padding-top:10px; font-weight:400; text-align:left;">A few things I know</h3>
 			           <p class="skillstext" style="padding-top:20px;" id="text"><i class="fa fa-git"></i> Git</p>
 			           <p class="skillstext" id="text"><i class="fa fa-tasks"></i>Project Design </p>
 			           <p class="skillstext" id="text"><i class="fa fa-html5"></i>HTML5</p>
