--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
 
 	<a name="about">
 		<div class="aboutsection">
-			<h3 style="text-align:center; padding:40px 0; color:white; font-size:30px;">About Me</h3>
+			<h3 style="text-align:center; padding:40px 0; color:black; font-size:30px;">About Me</h3>
 			<div class="photocircle">
 				<img src="images/profilepic.jpg" alt="" id="profilepic">
 			</div>
 			<div class="grid grid-pad padding">
 			    <div class="col-1-1">
 			       <div class="content">
-			           <p class="aboutme" id="text">
+			           <p class="aboutme">
 						Currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I'm a freelance junior web developer by night and student by day. Websign is my main focus even though I love everything  about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and like the cliche goes, sometimes Less is More. 
 
 						</p>
