--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="grid grid-pad padding">
 			    <div class="col-1-2">
 			       <div class="content">
-			       	   <h3 style="color:white; font-size:30px; padding-top:10px; font-weight:400; text-align:left;">A few things I know</h3>
+			       	   <h6 style="color:white; font-size:25px; padding:10px 0 5px 0; font-weight:400; text-align:left;"><u>Things I Know</u></h6>
 			           <p class="skillstext" style="padding-top:20px;" id="text"><i class="fa fa-git"></i> Git</p>
 			           <p class="skillstext" id="text"><i class="fa fa-tasks"></i>Project Design </p>
 			           <p class="skillstext" id="text"><i class="fa fa-html5"></i>HTML5</p>
