--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	
 <head>
 
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0"/>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="HandheldFriendly" content="true">
 	<title>Kenny Mark</title>
@@ -12,7 +12,7 @@
 	<link rel="stylesheet" href="css/font-awesome.css">
 	<script src="js/jquery.js"></script>
 	<script src="js/main.js"></script>
-	<link rel="icon" type="images/png" href="images/fav.png" /
+	<link rel="icon" type="images/png" href="images/logo.png" /
 	<link rel="icon" type="image/png" href="images/favicon.ico" /
 </head>
 
@@ -39,7 +39,7 @@
 
 	<a name="about">
 		<div class="aboutsection">
-			<h3 style="text-align:center; padding:40px 0; color:black; font-size:30px;">About Me</h3>
+			<h3 style="text-align:center; padding:40px 0; color:black; font-size:30px;color: #333333; font-weight:900;">About Me</h3>
 			<div class="photocircle">
 				<img src="images/profilepic.jpg" alt="" id="profilepic">
 			</div>
@@ -65,8 +65,8 @@
 			<div class="grid grid-pad padding">
 			    <div class="col-1-2">
 			       <div class="content">
-			       	   <h6 style="color:white; font-size:25px; padding:10px 0 5px 0; font-weight:400; text-align:left;"><u>Things I Know</u></h6>
-			           <p class="skillstext" style="padding-top:20px;" id="text"><i class="fa fa-git"></i> Git</p>
+			       	   <h6 style="color:white; font-size:25px; padding:50px 0 5px 0; font-weight:400; text-align:left; font-weight:900;">Things I Know</h6>
+			           <p class="skillstext" style="padding-top:10px;" id="text"><i class="fa fa-git"></i> Git</p>
 			           <p class="skillstext" id="text"><i class="fa fa-tasks"></i>Project Design </p>
 			           <p class="skillstext" id="text"><i class="fa fa-html5"></i>HTML5</p>
 			           <p class="skillstext" id="text"><i class="fa fa-css3"></i>CSS3</p>
