font sucks on other browsers

--- a/index.html
+++ b/index.html
@@ -147,7 +147,16 @@
 
 		  
 		});
+
+		
 	</script>
+
+	<script>
+		$('.fa-bars').click(function(){
+			$('.nav ul').show
+		});
+	</script>
+
 	<script>
 		$(function(){
 			smoothScroll(1000);
