color scheme changed to blue and white

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	<div class="aboutsection">
 
-		<h2>About Kenny</h2> 
+		<h2 style="color: #2D6A86;">About Kenny</h2> 
 
 		<div class="profilepic">
 		
@@ -88,7 +88,7 @@
 	</div>
 
 	<div class="contactsection">
-		<h2 style="text-align: center;">Say Hi</h2>
+		<h2 style="text-align: center;color: #41A8C6;">Say Hi</h2>
 		<div class="grid gridpad">
 		
 			<div class="col-1-2">
