--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class<head>
 	<meta charset="UTF-8">
-	<title>WELCOME | IT'S KENNY</title>
+	<title>Welcome | IT'S KENNY</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
@@ -34,7 +34,7 @@
 	
 	<div class="aboutsection">
 
-		<h2 style="color: #2D6A86;">About Kenny</h2> 
+		<h2 style="color:#1C4355;">About Kenny</h2> 
 
 		<div class="profilepic">
 		
@@ -48,7 +48,7 @@
 	</div>
 
 	<div class="skillssection">
-		<h2 style="color:white">Stuff I Know + Details</h2> 
+		<h2 style="color:white">Skills + Details</h2> 
 		<div class="grid grid-pad">
 			<div class="col-1-2">
 				<ul class="skill">
@@ -88,7 +88,7 @@
 	</div>
 
 	<div class="contactsection">
-		<h2 style="text-align: center;color: #41A8C6;">Say Hi</h2>
+		<h2 style="text-align: center;color:#1C4355;">Say Hi</h2>
 		<div class="grid gridpad">
 		
 			<div class="col-1-2">
