overhaul i think i am done

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	
 	<div class="aboutsection">
 
-		<h2 style="color:#1C4355;">About Kenny</h2> 
+		<h2 style="color:#1C4355;">About Me</h2> 
 
 		<div class="profilepic">
 		
