--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en" class<head>
 	<meta charset="UTF-8">
-	<title>Welcome | IT'S KENNY</title>
+	<title>Welcome | It's KENNY</title>
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
@@ -26,10 +26,14 @@
 		</div>
 	</nav>
 
-	<div class="jumbotron">
+	<div class="headersection">
+		<div class="intro1">
+			<h1 style="" class="intro">I AM KENNY MARK</h1>
+			<h1 style="font-size:32px;">Web Designer// Front End Developer/></h1>
+		</div>
 		
-		<div class="intro"> Hola! Soy Kenny</div>
-		<!--<h5>Liverpool,England</h5>-->
+	<i class="zmdi zmdi-chevron-down" style="font-size:38px; padding-top:20px;"></i>
+		
 	</div>
 	
 	<div class="aboutsection">
@@ -41,15 +45,14 @@
 		</div>
 		<div class="description">
 			<p>
-				Currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I'm a freelance junior web developer by night and student by day. Websign is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and like the cliche goes, sometimes "Less is More". 
-			</p>
+				Currently a student in college studying Computing and Systems Development at Liverpool College, Liverpool. I'm a freelance junior web developer by night and student by day. Websign is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and	 and like the cliche goes, sometimes "Less is More".</p>
 		</div>
 				
 	</div>
 
 	<div class="skillssection">
 		<h2 style="color:white">Skills + Details</h2> 
-		<div class="grid grid-pad">
+		<div class="grid grid-pad center">
 			<div class="col-1-2">
 				<ul class="skill">
 					<li>Git</li>
@@ -88,23 +91,23 @@
 	</div>
 
 	<div class="contactsection">
-		<h2 style="text-align: center;color:#1C4355;">Say Hi</h2>
+		<h2 style="text-align: center;color:#1C4355;">Contact Me</h2>
 		<div class="grid gridpad">
 		
 			<div class="col-1-2">
-				<form action="contact">
+				<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
 					<label for="">Subject</label>
 					<input type="text" placeholder="Hi">
 					<label for="">Name</label>
 					<input type="text" placeholder="Your Name">
 					<label for="">Email</label>
-					<input type="email" placeholder="example@gmail.com">
+					<input type="email"  name="_replyto" placeholder="example@gmail.com">
 
 				</form>
 			</div>
 
 			<div class="col-1-2">
-				<form action="contact">
+				<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
 					<label for="" class="msg">Message</label>
 					<input type="message" placeholder="Message" >
 					
@@ -113,16 +116,21 @@
 
 			
 		</div>
-		<input type="submit" value="Send">
+
+		<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
+			<input type="submit" value="Send">
+		</form>
+
+		
 	</div>
 
 	<div class="footer">
 		<div class="social">
 			
-			<i class="zmdi zmdi-twitter"></i>
-			<i class="zmdi zmdi-github"></i>
-			<i class="zmdi zmdi-linkedin-box"></i>
-			<i class="zmdi zmdi-email-open"></i>
+			<a href="https://twitter.com/sleekykenny"><i class="zmdi zmdi-twitter"></i></a>
+			<a href="https://github.com/kennymark"><i class="zmdi zmdi-github"></i></a>
+			<a href="https://www.linkedin.com/pub/kenneth-mark-coffie/103/596/831"><i class="zmdi zmdi-linkedin-box"></i></a>
+			<a href="mailto:unico.genio@outlook.com"><i class="zmdi zmdi-email-open"></i></a>
 			<p>Made with <i class="zmdi zmdi-favorite"></i> in Liverpool</p>
 		</div>	
 	</div> 
