--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en" class<head>
 	<meta charset="UTF-8">
 	<title>Welcome | It's KENNY</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
