--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 
-<html lang="en" class<head>
+<html lang="en">
+
+<head>
 	<meta charset="UTF-8">
 	<title>Welcome | It's KENNY</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
