--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<div class="grid gridpad">
 			
 				<div class="col-1-2">
-					<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
+					<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 						<label for="">Subject</label>
 						<input type="hidden name="_subject"  placeholder="Hi" "/>
 						<label for="">Name</label>
@@ -118,7 +118,7 @@
 				</div>
 
 				<div class="col-1-2">
-					<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
+					<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 						<label class="msg">Message</label>
 						<textarea name="message" rows="7" placeholder="Your message"></textarea>
 						
@@ -128,7 +128,7 @@
 				
 			</div>
 
-			<form action="//formspree.io/markcoffiekenneth@gmail.com" method="POST">
+			<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 				<input type="submit" value="Send">
 			</form>	
 		</div>		
