--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<nav>
 
 		<div class="links">
-			
+			<i class="zmdi zmdi-menu"></i>
 			<a href="#about" >about</a>
 			<a href="#skills">Skills</a>
 			<a href="#portfolio" >porfolio</a>
