added new background

--- a/index.html
+++ b/index.html
@@ -177,7 +177,12 @@
 		  });
 		});
 	</script>
-
+	
+	<script>
+	$(".zmdi-menu").click(function(){
+		    $(".links a").show();
+		});
+	</script>
 	
 </body>
 </html>
