added border to intro h1

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div class="headersection">
 		<div class="intro1">
-			<h1 style="" class="intro">I AM KENNY MARK</h1>
+			<h1 style="border:6px solid white;" class="intro">I AM KENNY MARK</h1>
 			<h1 style="font-size:32px;">Web Designer// Front End Developer/></h1>
 		</div>
 		
