--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 	<div class="headersection">
 		<div class="intro1">
-			<h1 style="border:6px solid white;" class="intro">I AM KENNY MARK</h1>
+			<h1 style="border:7px solid white;" class="intro">I AM KENNY MARK</h1>
 			<h1 style="font-size:32px;">Web Designer// Front End Developer/></h1>
 		</div>
 		
@@ -105,7 +105,7 @@
 			<div class="grid gridpad">
 			
 				<div class="col-1-2">
-					<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
+					<form action="https://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 						<label for="">Subject</label>
 						<input type="hidden name="_subject"  placeholder="Hi" "/>
 						<label for="">Name</label>
@@ -118,7 +118,7 @@
 				</div>
 
 				<div class="col-1-2">
-					<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
+					<form action="https://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 						<label class="msg">Message</label>
 						<textarea name="message" rows="7" placeholder="Your message"></textarea>
 						
@@ -128,7 +128,7 @@
 				
 			</div>
 
-			<form action="http://formspree.io/markcoffiekenneth@gmail.com" method="POST">
+			<form action="https://formspree.io/markcoffiekenneth@gmail.com" method="POST">
 				<input type="submit" value="Send">
 			</form>	
 		</div>		
