--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
+	<link rel="icon" 
+      type="image/png" 
+      href="favicon.ico">
 	<script src="js/flipping_text.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
    
