--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	<div class="headersection">
 		
 			<h1 class="intro">I AM KENNY MARK</h1>
-			<h1 class="intro1">Web Designer// Front End Developer/></h1>
+			<h1 class="intro1">&lt; Web Artist <span>||</span> Front End Developer/&gt;</h1>
 		
 		
 	<a href="#about">
@@ -76,7 +76,7 @@
 						<li>Jquery</li>
 						<li>CSS3</li>
 						<li>Photoshop</li>
-						<li>SQL(MySQL,MS Access)</li>					
+						<li>SQL (MySQL,MS Access)</li>					
 						<li>Frameworks (Bootstrap,Foundation etc)</li>
 					</ul>
 				</div>
@@ -88,7 +88,7 @@
 	<div class="explain">
 		
 					<p class="skilldescription">
-					I am currently a junior developer working my way up to be a mid-level developer sooner than later. I actively spend many hours per day writing web code to perfect my skills.Web development is what I'm really passionate about hence the effort I put in. Skill wise, I can practically build any type of website with a good modern and responsive design that doesn't complex interactions between the browser and a server. 
+					I am currently a junior developer working my way up to be a mid-level developer sooner than later. I actively spend many hours per day writing web code to perfect my skills. Web development is what I'm really passionate about hence the effort I put in. Skill wise, I can practically build any type of website with a good modern and responsive design that doesn't complex interactions between the browser and a server. 
 					</p>	
 	</div>
 
