--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
 	<link rel="icon" type="image/png" href="favicon.ico">
-	<script src="js/flipping_text.js"></script>
+	<script src="js/flipping_text.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 </head>
 
@@ -28,7 +28,7 @@
 
 	<div class="headersection">
 		
-			<h1 class="intro">I AM KENNY MARK</h1>
+			<h1 class="intro firstext">I AM KENNY MARK</h1>
 			<h1 class="intro1">&lt; Web Artist <span>||</span> Front End Developer/&gt;</h1>
 		
 		
@@ -41,7 +41,7 @@
 	<a name="about">
 		<div class="aboutsection">
 
-			<h2 style="color:#2d2d2d;">About Me</h2> 
+			<h2 style="padding-top:80px;">About Me</h2> 
 
 			<div class="profilepic">
 			
@@ -111,7 +111,7 @@
 
 	<a name="contact">
 		<div class="contactsection">
-			<h2 style="text-align: center;color:#2d2d2d;">Contact Me</h2>
+			<h2 >Contact Me</h2>
 			<div class="grid gridpad">
 			
 				<div class="col-1-2">
@@ -162,7 +162,7 @@
 		
 	<script>
 
-		$(".intro").flipping_text({
+		$(".firsttext").flipping_text({
 		    tickerTime: 50,
 		    customRandomChar: false,
 		    tickerCount: 4,
