--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 	</div> 
 
 	<div class="subfooter">
-	 	<p><span>all content copyright</span> &copy Kenneth Mark coffie 2015</p>
+	 	<p><span>all content copyright</span> &copy Kenneth Mark coffie <span>2015</span></p>
 	 </div>
 		
 	<script>
