added package.json file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 	<link rel="stylesheet" href="js/main.js">
 	<link rel="stylesheet" href="css/simplegrid.css">
 	<link rel="icon" type="image/png" href="favicon.ico">
-	<script src="js/flipping_text.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
 </head>
 
@@ -67,6 +66,7 @@
 						<li>Html5</li>
 						<li>Javascript</li>
 						<li>Project Design</li>
+						<li>Yeoman Workflow (Yeoman, Bower & Grunt)</li>
 				
 					</ul>
 				</div>
@@ -159,17 +159,6 @@
 	<div class="subfooter">
 	 	<p><span>all content copyright</span> &copy Kenneth Mark coffie <span>2015</span></p>
 	 </div>
-		
-	<script>
-
-		$(".firsttext").flipping_text({
-		    tickerTime: 50,
-		    customRandomChar: false,
-		    tickerCount: 4,
-		    opacityEffect: true,
-		    resetOnChange: false
-		  });
-	</script>
 
 	<script>
 		$(function() {
@@ -188,6 +177,6 @@
 		});
 	</script>
 	
-	
+	</script>
 </body>
 </html>
