--- a/index.html
+++ b/index.html
@@ -62,11 +62,10 @@
 				<div class="col-1-2">
 					<ul class="skill">
 						<li>Git</li>
-						<li>Java</li>
 						<li>Html5</li>
 						<li>Javascript</li>
 						<li>Project Design</li>
-						<li>Yeoman Workflow (Yeoman, Bower & Grunt)</li>
+						<li>Yeoman Workflow (Yeoman, Bower & Gulp)</li>
 				
 					</ul>
 				</div>
@@ -75,8 +74,8 @@
 					<ul class="skill">
 						<li>Jquery</li>
 						<li>CSS3</li>
-						<li>Photoshop</li>
-						<li>SQL (MySQL,MS Access)</li>					
+						<li>Photoshop</li>				
+						<li>Responsive Design</li>
 						<li>Frameworks (Bootstrap,Foundation etc)</li>
 					</ul>
 				</div>
@@ -100,9 +99,16 @@
 			<div class="grid">
 				<div class="col-1-2 project">
 					<img src="img/davon.png" style="height:400px; width:100%;">
+					<center><a href="www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;">
+					Project Site</a></center>
 				</div>
 
-				<div class="col-1-2 project"><img src="img/placeholder.PNG" style="height:400px; width:100%;"></div>
+				<div class="col-1-2 project"><img src="img/oz.JPG" style="height:400px; width:100%;">
+					<center><a href="www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;">
+					Project Site</a></center>
+
+				</div>
+				
 			</div>
 		
 		</div>		
