revert name back after showing andrews

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 	<div class="headersection">
 		
-			<h1 class="intro firstext">I AM KENNY MARK COFFIE</h1>
+			<h1 class="intro firstext">I AM KENNY MARK</h1>
 			<h1 class="intro1">&lt; Web Artist <span>||</span> Front End Developer/&gt;</h1>
 		
 		
