fixed project links by adding http://

--- a/index.html
+++ b/index.html
@@ -99,12 +99,12 @@
 			<div class="grid">
 				<div class="col-1-2 project">
 					<img src="img/davon.png" style="height:400px; width:100%;">
-					<center><a href="www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;" target="_blank">
+					<center><a href="http://www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;" target="_blank">
 					Davon's Website</a></center>
 				</div>
 
 				<div class="col-1-2 project"><img src="img/oz.JPG" style="height:400px; width:100%;">
-					<center><a href="www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;" target="_blank">
+					<center><a href="http://www.dacrew.tk" style="color:white; padding-top:15px; font-family:raleway;" target="_blank">
 					Oz Studios Website</a></center>
 
 				</div>
