--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
    <meta charset="UTF-8">
    <meta name="author" content="Kenneth Mark Coffie">
+   <meta name="description" content="kennymark's personal website">
+   <meta name="revisit-after" content="10 days">
+   <meta name="keywords" content="HTML,CSS,git,JavaScript, liverpool,web developer, portfolio, @sleekykenny">
+   <meta name="google" content="translate" />
+   <meta property="og:site_name" content="Kenny Mark">
+   <meta property="og:url" content="http://kennymark.me">
+   <meta name="robots" content="index">
+   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta name="viewport" content="width=device-width", initial-scale=1>
-   <title>Redesign</title>
+   <title>Kenny Mark</title>
    <link rel="stylesheet" href="css/styles.css">
    <script src="bower_components/jquery/dist/jquery.min.js"></script>
    <script src="js/index.js"></script>
+   <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+     
+     ga('create', 'UA-68267074-1', 'auto');
+     ga('send', 'pageview');
+  </script>
 </head>
    <body>
       <nav>
