--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta charset="UTF-8">
-   <meta name="author" content="Kenneth Mark Coffie">
+   <meta name="author" content="Kenny Mark">
    <meta name="description" content="kennymark's personal website">
    <meta name="revisit-after" content="10 days">
    <meta name="keywords" content="HTML,CSS,git,JavaScript, liverpool,web developer, portfolio, @sleekykenny">
@@ -63,7 +63,7 @@
       <div class="profilesection hide" id="profile">
          <h2 class="title">Profile</h2>
          <div class="profilepic"></div>
-         <p class="desc">Currently an Computer Science major undergrad at the University of Chester. I'm a freelance junior web developer by night and student by day. Web design is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and  and like the cliche goes, sometimes "Less is More".
+         <p class="desc">I'm <i>Kenny Mark<i> and I'm currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web developer by night and student by day. Web design is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and  and like the cliche goes, sometimes "Less is More".
          <i class="fa fa-caret-down"></i> 
          </p>
          <p class=" desc desc2">
@@ -101,7 +101,7 @@
 
       <div class="portfoliosection hide" id="port">
          <ul class="slideshow">
-            <img src="img/davon.png" alt="Davon's Website">
+            <img src="img/davon.png" alt=" kenny mark Davon's Website">
             <!-- <img src="img/oz.JPG" alt="Oz studios website"> -->
          </div>
       </div>
@@ -128,6 +128,7 @@
       <footer class="hide">
          <div class="social">
             <a href="https://twitter.com/sleekykenny" target="_blank"><i class="fa fa-twitter"></i> </a>
+            <a href="https://facebook.com/kenneth.markcoffie" target="_blank"><i class="fa fa-facebook"></i> </a>
             <a href="https://github.com/kennymark" target="_blank"><i class="fa fa-github-alt"></i></a>
             <a href="https://www.linkedin.com/pub/kenneth-mark-coffie/103/596/831"target="_blank"><i class="fa fa-linkedin"></i></a>
             <a href="mailto:kennymark@kennymark.me"><i class="fa fa-envelope"></i></a>
