--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       <div class="profilesection hide" id="profile">
          <h2 class="title">Profile</h2>
          <div class="profilepic"></div>
-         <p class="desc">I'm <i>Kenny Mark<i> and I'm currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web developer by night and student by day. Web design is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and  and like the cliche goes, sometimes "Less is More".
+         <p class="desc">I'm <i>Kenny Mark</i> and I'm currently a Computer Science major undergrad at the University of Chester. I'm a freelance junior web developer by night and student by day. Web design is my main focus even though I love everything about user interaction design and user experience on the web. I have worked on several personal projects including my this website which I designed and developed in less than 20 hours of work combined. I am minimalist when it comes to the web, and  and like the cliche goes, sometimes "Less is More".
          <i class="fa fa-caret-down"></i> 
          </p>
          <p class=" desc desc2">
