added google analytics

--- a/index.html
+++ b/index.html
@@ -2,27 +2,37 @@
 <html lang="en">
 
 <head>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-68267074-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-68267074-1');
+  </script>
+
   <meta charset="UTF-8">
   <meta name="theme-color" content="#40e0d0">
   <title>Kenny Mark</title>
-  <link rel="canonical" href="http://www.kennymark.co/new/">
+  <link rel="canonical" href="http://www.kennymark.co.uk">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="keywords" content="web developer, computer science, liverpool, hire me, web design, coding, build, websites, javascript, css, html">
+  <meta name="keywords" content="web developer, computer science, liverpool, chester, Manchester hire me, web design, coding, build, websites, javascript, css, html">
   <meta name="description" content="This is Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
   <!--FACEBOOK-->
   <meta property="og:title" content="">
   <meta property="og:site_name" content="">
-  <meta property="og:url" content="http://www.kennymark.co/new/">
+  <meta property="og:url" content="http://www.kennymark.co.uk/new/">
   <meta property="og:description" content="This is Kenny Mark's Personal Website. I am a computer science student who loves web development. I am for hire">
-  
+
   <!--TWITTER-->
   <meta property="twitter:card" content="summary">
   <meta property="twitter:title" content="">
   <meta property="twitter:description" content="">
   <meta property="twitter:creator" content="Kenny Mark">
-  <meta property="twitter:url" content="http://www.kennymark.co/new/">
+  <meta property="twitter:url" content="http://www.kennymark.co.uk/new/">
 
- 
+
   <!--FAVICONS-->
   <link rel="apple-touch-icon" sizes="57x57" href="assets/fav/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="assets/fav/apple-icon-60x60.png">
@@ -52,18 +62,30 @@
   <div class="sideNav">
     <p>MENU</p>
     <ul>
-      <li class="items"><a href="#projects">Projects</a></li>
-      <li class="items"><a href="#profile">Profile</a></li>
-      <li class="items"><a href="#skills">Skills</a></li>
-      <li class="items"><a href="#contact">Contact</a></li>
-      <li class="items"><a href="assets/KennethCV.pdf" target="_blank">CV</a></li>
+      <li class="items">
+        <a href="#projects">Projects</a>
+      </li>
+      <li class="items">
+        <a href="#profile">Profile</a>
+      </li>
+      <li class="items">
+        <a href="#skills">Skills</a>
+      </li>
+      <li class="items">
+        <a href="#contact">Contact</a>
+      </li>
+      <li class="items">
+        <a href="assets/KennethCV.pdf" target="_blank">CV</a>
+      </li>
     </ul>
   </div>
   <div class="realbody">
     <div class="landing">
       <!--<video src="assets/video/bgVideo.mp4" autoplay loop></video>-->
       <div class="introdiv">
-        <h1>Hello! I'm Kenny and I <span class="intro"> </span> <br>websites</h1>
+        <h1>Hello! I'm Kenny and I
+          <span class="intro"> </span>
+          <br>websites</h1>
       </div>
 
     </div>
@@ -73,23 +95,34 @@
         <div class="col proj1">
           <img src="imgs/weatherapp.PNG" alt="An image of a weather app on codepen.io" />
           <div class="description">
-              <p>This is a weather app built with the DarkWeather API to query weather data based on user data or from a search input. Languages used here were mainly JavaScript, JQuery. I used both the axios library and the JQuery API methods to make the API calls.</p>
-              <button><a href="https://run.plnkr.co/plunks/0EHSofihFea3DvhDaYRb/" target="_blank">View Project</a></button>
+            <p>This is a weather app built with the DarkWeather API to query weather data based on user data or from a search
+              input. Languages used here were mainly JavaScript, JQuery. I used both the axios library and the JQuery API
+              methods to make the API calls.</p>
+            <button>
+              <a href="https://run.plnkr.co/plunks/0EHSofihFea3DvhDaYRb/" target="_blank">View Project</a>
+            </button>
           </div>
         </div>
         <div class="col proj2">
           <img src="imgs/texteditor.PNG" alt="An image of a text editor app on codepen" />
           <div class="description">
-              <p>This is a web based text editor that does real time text analysis using natural language processing via the compromise.cool and rita.js libraries</p>
-              <button><a href="https://codepen.io/kennymark/full/KmRVjp/" target="_blank">View Project</a></button>
+            <p>This is a web based text editor that does real time text analysis using natural language processing via the compromise.cool
+              and rita.js libraries</p>
+            <button>
+              <a href="https://codepen.io/kennymark/full/KmRVjp/" target="_blank">View Project</a>
+            </button>
           </div>
         </div>
-        
+
         <div class="col proj3">
           <img src="imgs/schoolwebsite.PNG" alt="Image of the school website" />
           <div class="description">
-              <p>One of my most proudest projects or projects yet. The FSE-REC is an asp.net website built by me and and 3 other friends as a projects for my second year project in University. It was built in the course of 4 weeks. It includes functionality ranging from a SQl database, dynamic routing, login integration. </p>
-              <button><a href="http://1613775.studentwebserver.co.uk/fserec/" target="_blank">View Project</a></button>
+            <p>One of my most proudest projects or projects yet. The FSE-REC is an asp.net website built by me and and 3 other
+              friends as a projects for my second year project in University. It was built in the course of 4 weeks. It includes
+              functionality ranging from a SQl database, dynamic routing, login integration. </p>
+            <button>
+              <a href="http://1613775.studentwebserver.co.uk/fserec/" target="_blank">View Project</a>
+            </button>
           </div>
         </div>
 
@@ -99,29 +132,40 @@
         <div class="col proj4">
           <img src="imgs/ozstudio.PNG" alt="an image of Oz Studios homepage" />
           <div class="description">
-              <p>Oz Studios is a fictional web design agency website built to showcase my skills as a front-end developer or web designer. The project is hosted on Github and the code can be used without attribution</p>
-              <button><a href="http://www.kennymark.co.uk/oz" target="_blank">View Project</a></button>
+            <p>Oz Studios is a fictional web design agency website built to showcase my skills as a front-end developer or web
+              designer. The project is hosted on Github and the code can be used without attribution</p>
+            <button>
+              <a href="http://www.kennymark.co.uk/oz" target="_blank">View Project</a>
+            </button>
           </div>
         </div>
 
         <div class="col proj5">
           <img src="imgs/davon.png" alt="Image of Davon's website" />
           <div class="description">
-              <p>Davon's personal website is a modern colourful website built to suit the clients need. Design was inspired by material design and other artists design work </p>
-              <button><a href="http://www.kennymark.co.uk/davon" target="_blank">View Project</a></button>
+            <p>Davon's personal website is a modern colourful website built to suit the clients need. Design was inspired by
+              material design and other artists design work </p>
+            <button>
+              <a href="http://www.kennymark.co.uk/davon" target="_blank">View Project</a>
+            </button>
           </div>
-          
+
         </div>
         <div class="col proj6">
           <img src="imgs/blogPost.PNG" alt="An simple design" />
           <div class="description">
-              <p>A showcase of my skills to reproduce pixel by pixel a projuct after it has been designed by a designer using normal front-end technologies</p>
-              <button><a href="https://codepen.io/kennymark/full/LGxpNz/" target="_blank"> View Project</a></button>
+            <p>A showcase of my skills to reproduce pixel by pixel a projuct after it has been designed by a designer using
+              normal front-end technologies</p>
+            <button>
+              <a href="https://codepen.io/kennymark/full/LGxpNz/" target="_blank"> View Project</a>
+            </button>
           </div>
         </div>
       </div>
 
-      <a href="projects.html" _target="blank"><button class="btn">View more projects &#8594;</button></a>
+      <a href="projects.html" _target="blank">
+        <button class="btn">View more projects &#8594;</button>
+      </a>
     </div>
     <div class="profile" id="profile">
       <div class="container">
@@ -174,15 +218,26 @@
       <h1>Holla at me 👇</h1>
       <form action="https://formspree.io/geniounico@outlook.com" method="POST" class="form">
         <div class="leftform">
-          <label name="subject">Subject</label> <br /> <br />
-          <input type="text" name="name" /> <br />
-          <label>Name</label> <br /> <br />
-          <input type="text" required/> <br />
-          <label>Email</label> <br /> <br />
-          <input type="email" name="_replyto" required /> <br />
+          <label name="subject">Subject</label>
+          <br />
+          <br />
+          <input type="text" name="name" />
+          <br />
+          <label>Name</label>
+          <br />
+          <br />
+          <input type="text" required/>
+          <br />
+          <label>Email</label>
+          <br />
+          <br />
+          <input type="email" name="_replyto" required />
+          <br />
         </div>
         <div class="rightform">
-          <label>Message</label> <br /> <br />
+          <label>Message</label>
+          <br />
+          <br />
           <textarea cols="40" name="emailcontent"></textarea>
 
         </div>
